@@ -1,6 +1,6 @@
 dnl -*-m4-*-
 dnl Process this file with autoconf to produce a configure script.
-AC_INIT(grap, 1.24pre1, faber@lunabase.org)
+AC_INIT(grap, 1.24pre2, faber@lunabase.org)
 AC_CONFIG_HEADER(config.h)
 AC_LANG_CPLUSPLUS
 
@@ -33,7 +33,7 @@ AC_HEADER_STDC
 if test $ac_cv_header_stdc = "no"; then
 	AC_CHECK_HEADERS(stdlib.h)
 fi
-AC_CHECK_HEADERS(unistd.h hash_map)
+AC_CHECK_HEADERS(unistd.h errno.h hash_map)
 
 dnl Checks for typedefs, structures, and compiler characteristics.
 AC_TYPE_SIZE_T
